# CmakeFunction

./: .gitignore  .gitmodules  README.md
CmakeFuncs/: CmakeFuncsConfig.cmake
CmakeFuncs/subFunctuon/: addSubdirectoryConfig.cmake  pathConfig.cmake  qtConfig.cmake  setTargetPropertyConfig.cmake  stringConfig.cmake  targetLinkConfig.cmake  testConfig.cmake  userQtConfig.cmake
cmake_source/learn/cmake/get_current_path_name_to_project_name/: CMakeLists.txt
cmake_source/learn/cpp 23/source_location and stacktrace/: CMakeLists.txt
cmake_source/learn/cpp 23/source_location and stacktrace/srcs/: main.cpp
cmake_source/learn/cpp 23/time/: CMakeLists.txt
cmake_source/learn/cpp 23/utf8 and multibyte char/: CMakeLists.txt
cmake_source/learn/cpp 23/utf8 and multibyte char/srcs/: main.cpp
cmake_source/learn/imgui/demo001/: CMakeLists.txt
cmake_source/learn/imgui/demo001/srcs/: main.cpp
cmake_source/learn/opengl/getProgramValueInfo/: CMakeLists.txt
cmake_source/learn/qt/demo001/: CMakeLists.txt
cmake_source/learn/qt/demo001/cmake_generate/translations/: MagicRenderView_en.ts  MagicRenderView_zh_CN.ts  cmake_source_learn_qt_demo001_en.ts  cmake_source_learn_qt_demo001_zh_CN.ts
cmake_source/learn/qt/demo001/srcs/: main.cpp
cmake_source/learn/qt/demo001/srcs/windows/: MainWindow.cpp  MainWindow.h
cmake_source/testCode/atest/: CMakeLists.txt
lib/glad-3-3.core/include/glad/: glad.h
lib/glad-3-3.core/src/: glad.c
lib/glad-4-6.compatibility/include/glad/: glad.h
lib/glad-4-6.compatibility/src/: glad.c
lib/glad-4-6.core/include/glad/: glad.h
lib/glad-4-6.core/src/: glad.c
lib/glad_noes_core/include/glad/: glad.h
lib/glad_noes_core/src/: glad.c
lib/imgui-1.91.7/examples/example_glfw_opengl3/: main.cpp
temp/cmake_in/: cmake_property_to_c_cpp_header_env.h  cmake_property_to_c_cpp_header_env.h.in  cmake_qt_to_c_cpp_header_env.h  cmake_to_c_cpp_header_env.h  cmake_to_c_cpp_header_env.h.in  cmake_value_to_c_cpp_header_env.h  cmake_value_to_c_cpp_header_env.h.in
testCode/atest/: CMakeLists.txt
testCode/atest/resources/cmake/properties/: Properties on Targets.txt
userLib/DataCheck/: CMakeLists.txt
userLib/DataCheck/srcs/: CMakeLists.txt
userLib/HtmlTools/: CMakeLists.txt
userLib/tools/: CMakeLists.txt
userLib/tools/srcs/tools/: image.h  io.h  path.cpp  path.h  stringTools.cpp  stringTools.h  time.h  toolsNamespace.h
